Делает main-block desktop

--- a/source/index.html
+++ b/source/index.html
@@ -6,15 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Supergym - самый большой фитнес центр за Уралом">
     <meta name="keywords" content="тренажерные залы, абонементы, тренеры">
-    <title>supergym</title>
+    <title>Supergym</title>
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <div style="display: none;">
       <include src="build/img/sprite_auto.svg"></include>
     </div>
-    <h1>Фитнес центр</h1>
-    <h2>Омск</h2>
+    <main>
+      <section class="main-block">
+        <div class="main-block__inner">
+          <div class="main-block__top">
+            <div class="main-block__logo">
+              <a>Supergym</a>
+            </div>
+            <div class="main-block__phone">
+              <a href="tel:88005555555">8-800-555-55-55</a>
+            </div>
+          </div>
+          <div class="main-block__bottom">
+            <div class="main-block__container">
+              <h1><span>Омск</span><br>Фитнес<br>центр</h1>
+              <ul class="main-block__promo">
+                <li>Тренажёрный зал</li>
+                <li>Групповые занятия</li>
+                <li>Кардио-зона</li>
+              </ul>
+              <div class="main-block__button">
+                <a href="#">Купить абонемент</a>
+              </div>
+            </div>
+            <div class="main-block__photo">
+            </div>
+            <ul class="main-block__social">
+              <li><a href="https://www.facebook.com/" target="_blank">FB</a></li>
+              <li><a href="https://vk.com/" target="_blank">VK</a></li>
+              <li><a href="https://www.instagram.com/" target="_blank">IG</a></li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="js/bundle.min.js"></script>
   </body>
 </html>
