Добавляет в main-block tablet

--- a/source/index.html
+++ b/source/index.html
@@ -26,7 +26,8 @@
           </div>
           <div class="main-block__bottom">
             <div class="main-block__container">
-              <h1><span>Омск</span><br>Фитнес<br>центр</h1>
+              <p>Омск</p>
+              <h1>Фитнес<br>центр</h1>
               <ul class="main-block__promo">
                 <li>Тренажёрный зал</li>
                 <li>Групповые занятия</li>
