Делает gym desktop

--- a/source/index.html
+++ b/source/index.html
@@ -47,6 +47,26 @@
           </div>
         </div>
       </section>
+      <section class="gym">
+        <div class="gym__inner">
+          <div class="gym__text">
+            <h2>Тренажерный зал</h2>
+            <p class="gym__subtitle">Просторный зал площадью 900 кв/м</p>
+            <p class="gym__paragraph"><span>Supergym</span> – самый большой фитнес центр за Уралом и
+              идеальное место для укрепления тела и здоровья.
+              Тренажерный зал оснащен всем необходимым современным оборудованием для всех спортсменов.</p>
+            <p class="gym__paragraph">В зале расположены отдельная зона для <span>Crossfit</span> и
+              кардио-зона с 40 тренажерами.
+              Также в фитнес центре есть несколько оборудованных залов для различных видов групповых занятий.</p>
+          </div>
+          <div class="gym__image">
+            <div class="gym__video gym-video">
+              <div class="gym-video__cover"></div>
+              <button type="button"><span class="visually-hidden">Play</span></button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="js/bundle.min.js"></script>
   </body>
