Делает season-tickets desktop табы с js

--- a/source/index.html
+++ b/source/index.html
@@ -67,6 +67,127 @@
           </div>
         </div>
       </section>
+      <section class="season-tickets">
+        <div class="season-tickets__inner">
+          <h2>Абонементы</h2>
+          <ul class="season-tickets__tabs">
+            <li class="season-tickets__tabs-item season-tickets__tabs-item--active">
+              <button type="button">1 месяц</button>
+            </li>
+            <li class="season-tickets__tabs-item">
+              <button type="button">6 месяцев</button>
+            </li>
+            <li class="season-tickets__tabs-item">
+              <button type="button">12 месяцев</button>
+            </li>
+          </ul>
+          <ul class="season-tickets__offers">
+            <li>
+              <p class="visually-hidden">1 месяц</p>
+              <ul class="season-tickets__tab-set">
+                <li>
+                  <div class="offer">
+                    <h3>С тренером</h3>
+                    <p class="offer__order">12 занятий</p>
+                    <p class="offer__price">5000</p>
+                    <div class="offer__btn">
+                      <a href="#">Купить абонемент</a>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="offer">
+                    <h3>Дневной</h3>
+                    <p class="offer__order">с 8:00 до 17:00 </p>
+                    <p class="offer__price">1700</p>
+                    <div class="offer__btn">
+                      <a href="#">Купить абонемент</a>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="offer">
+                    <h3>Полный день</h3>
+                    <p class="offer__order">с 8:00 до 22:00 </p>
+                    <p class="offer__price">2700</p>
+                    <div class="offer__btn">
+                      <a href="#">Купить абонемент</a>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <ul>
+                <li>
+                  <div class="offer">
+                    <h3>С тренером</h3>
+                    <p class="offer__order">12 занятий</p>
+                    <p class="offer__price">5000</p>
+                    <div class="offer__btn">
+                      <a href="#">Купить абонемент</a>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="offer">
+                    <h3>Дневной</h3>
+                    <p class="offer__order">с 8:00 до 17:00 </p>
+                    <p class="offer__price">1700</p>
+                    <div class="offer__btn">
+                      <a href="#">Купить абонемент</a>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="offer">
+                    <h3>Полный день</h3>
+                    <p class="offer__order">с 8:00 до 22:00 </p>
+                    <p class="offer__price">2700</p>
+                    <div class="offer__btn">
+                      <a href="#">Купить абонемент</a>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <ul>
+                <li>
+                  <div class="offer">
+                    <h3>С тренером</h3>
+                    <p class="offer__order">12 занятий</p>
+                    <p class="offer__price">5000</p>
+                    <div class="offer__btn">
+                      <a href="#">Купить абонемент</a>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="offer">
+                    <h3>Дневной</h3>
+                    <p class="offer__order">с 8:00 до 17:00 </p>
+                    <p class="offer__price">1700</p>
+                    <div class="offer__btn">
+                      <a href="#">Купить абонемент</a>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="offer">
+                    <h3>Полный день</h3>
+                    <p class="offer__order">с 8:00 до 22:00 </p>
+                    <p class="offer__price">2700</p>
+                    <div class="offer__btn">
+                      <a href="#">Купить абонемент</a>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <script src="js/bundle.min.js"></script>
   </body>
