Добавляет season-tickets табы цвет текста hover, active

--- a/source/index.html
+++ b/source/index.html
@@ -82,7 +82,7 @@
             </li>
           </ul>
           <ul class="season-tickets__offers">
-            <li>
+            <li class="season-tickets__offers-item season-tickets__offers-item--active">
               <p class="visually-hidden">1 месяц</p>
               <ul class="season-tickets__tab-set">
                 <li>
@@ -117,7 +117,7 @@
                 </li>
               </ul>
             </li>
-            <li>
+            <li class="season-tickets__offers-item">
               <ul>
                 <li>
                   <div class="offer">
@@ -151,7 +151,7 @@
                 </li>
               </ul>
             </li>
-            <li>
+            <li class="season-tickets__offers-item">
               <ul>
                 <li>
                   <div class="offer">
