--- a/source/index.html
+++ b/source/index.html
@@ -72,13 +72,13 @@
           <h2>Абонементы</h2>
           <ul class="season-tickets__tabs">
             <li class="season-tickets__tabs-item season-tickets__tabs-item--active">
-              <button type="button">1 месяц</button>
+              <button type="button"><span>1 месяц</span></button>
             </li>
             <li class="season-tickets__tabs-item">
-              <button type="button">6 месяцев</button>
+              <button type="button"><span>6 месяцев</span></button>
             </li>
             <li class="season-tickets__tabs-item">
-              <button type="button">12 месяцев</button>
+              <button type="button"><span>12 месяцев</span></button>
             </li>
           </ul>
           <ul class="season-tickets__offers">
@@ -89,7 +89,7 @@
                   <div class="offer">
                     <h3>С тренером</h3>
                     <p class="offer__order">12 занятий</p>
-                    <p class="offer__price">5000</p>
+                    <p class="offer__price"><span>5000</span></p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
                     </div>
@@ -99,7 +99,7 @@
                   <div class="offer">
                     <h3>Дневной</h3>
                     <p class="offer__order">с 8:00 до 17:00 </p>
-                    <p class="offer__price">1700</p>
+                    <p class="offer__price"><span>1700</span></p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
                     </div>
@@ -109,7 +109,7 @@
                   <div class="offer">
                     <h3>Полный день</h3>
                     <p class="offer__order">с 8:00 до 22:00 </p>
-                    <p class="offer__price">2700</p>
+                    <p class="offer__price"><span>2700</span></p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
                     </div>
