--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
     <div style="display: none;">
       <include src="build/img/sprite_auto.svg"></include>
     </div>
-    <main>
+    <main class="page-main">
       <section class="main-block">
         <div class="main-block__inner">
           <div class="main-block__top">
@@ -68,6 +68,7 @@
         </div>
       </section>
       <section class="season-tickets">
+        <div class="season-tickets__bg"></div>
         <div class="season-tickets__inner">
           <h2>Абонементы</h2>
           <ul class="season-tickets__tabs">
@@ -89,7 +90,10 @@
                   <div class="offer">
                     <h3>С тренером</h3>
                     <p class="offer__order">12 занятий</p>
-                    <p class="offer__price"><span>5000</span></p>
+                    <p class="offer__price">
+                      <span class="offer__price-main">5000</span>
+                      <span class="offer__price-shadow">5000</span>
+                    </p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
                     </div>
@@ -99,7 +103,10 @@
                   <div class="offer">
                     <h3>Дневной</h3>
                     <p class="offer__order">с 8:00 до 17:00 </p>
-                    <p class="offer__price"><span>1700</span></p>
+                    <p class="offer__price">
+                      <span class="offer__price-main">1700</span>
+                      <span class="offer__price-shadow">1700</span>
+                    </p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
                     </div>
@@ -109,7 +116,10 @@
                   <div class="offer">
                     <h3>Полный день</h3>
                     <p class="offer__order">с 8:00 до 22:00 </p>
-                    <p class="offer__price"><span>2700</span></p>
+                    <p class="offer__price">
+                      <span class="offer__price-main">2700</span>
+                      <span class="offer__price-shadow">2700</span>
+                    </p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
                     </div>
