--- a/source/index.html
+++ b/source/index.html
@@ -128,12 +128,16 @@
               </ul>
             </li>
             <li class="season-tickets__offers-item">
-              <ul>
+              <p class="visually-hidden">6 месяцев</p>
+              <ul class="season-tickets__tab-set">
                 <li>
                   <div class="offer">
-                    <h3>С тренером</h3>
+                    <h3>С тренером 2</h3>
                     <p class="offer__order">12 занятий</p>
-                    <p class="offer__price">5000</p>
+                    <p class="offer__price">
+                      <span class="offer__price-main">5000</span>
+                      <span class="offer__price-shadow">5000</span>
+                    </p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
                     </div>
@@ -141,9 +145,12 @@
                 </li>
                 <li>
                   <div class="offer">
-                    <h3>Дневной</h3>
+                    <h3>Дневной 2</h3>
                     <p class="offer__order">с 8:00 до 17:00 </p>
-                    <p class="offer__price">1700</p>
+                    <p class="offer__price">
+                      <span class="offer__price-main">1700</span>
+                      <span class="offer__price-shadow">1700</span>
+                    </p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
                     </div>
@@ -151,9 +158,12 @@
                 </li>
                 <li>
                   <div class="offer">
-                    <h3>Полный день</h3>
+                    <h3>Полный день 2</h3>
                     <p class="offer__order">с 8:00 до 22:00 </p>
-                    <p class="offer__price">2700</p>
+                    <p class="offer__price">
+                      <span class="offer__price-main">2700</span>
+                      <span class="offer__price-shadow">2700</span>
+                    </p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
                     </div>
@@ -162,12 +172,16 @@
               </ul>
             </li>
             <li class="season-tickets__offers-item">
-              <ul>
+              <p class="visually-hidden">12 месяцев</p>
+              <ul class="season-tickets__tab-set">
                 <li>
                   <div class="offer">
-                    <h3>С тренером</h3>
+                    <h3>С тренером 3</h3>
                     <p class="offer__order">12 занятий</p>
-                    <p class="offer__price">5000</p>
+                    <p class="offer__price">
+                      <span class="offer__price-main">5000</span>
+                      <span class="offer__price-shadow">5000</span>
+                    </p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
                     </div>
@@ -175,9 +189,12 @@
                 </li>
                 <li>
                   <div class="offer">
-                    <h3>Дневной</h3>
+                    <h3>Дневной 3</h3>
                     <p class="offer__order">с 8:00 до 17:00 </p>
-                    <p class="offer__price">1700</p>
+                    <p class="offer__price">
+                      <span class="offer__price-main">1700</span>
+                      <span class="offer__price-shadow">1700</span>
+                    </p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
                     </div>
@@ -185,9 +202,12 @@
                 </li>
                 <li>
                   <div class="offer">
-                    <h3>Полный день</h3>
+                    <h3>Полный день 3</h3>
                     <p class="offer__order">с 8:00 до 22:00 </p>
-                    <p class="offer__price">2700</p>
+                    <p class="offer__price">
+                      <span class="offer__price-main">2700</span>
+                      <span class="offer__price-shadow">2700</span>
+                    </p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
                     </div>
