--- a/source/index.html
+++ b/source/index.html
@@ -132,11 +132,11 @@
               <ul class="season-tickets__tab-set">
                 <li>
                   <div class="offer">
-                    <h3>С тренером 2</h3>
+                    <h3>С тренером</h3>
                     <p class="offer__order">12 занятий</p>
                     <p class="offer__price">
-                      <span class="offer__price-main">5000</span>
-                      <span class="offer__price-shadow">5000</span>
+                      <span class="offer__price-main">4900</span>
+                      <span class="offer__price-shadow">4900</span>
                     </p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
@@ -145,11 +145,11 @@
                 </li>
                 <li>
                   <div class="offer">
-                    <h3>Дневной 2</h3>
+                    <h3>Дневной</h3>
                     <p class="offer__order">с 8:00 до 17:00 </p>
                     <p class="offer__price">
-                      <span class="offer__price-main">1700</span>
-                      <span class="offer__price-shadow">1700</span>
+                      <span class="offer__price-main">1600</span>
+                      <span class="offer__price-shadow">1600</span>
                     </p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
@@ -158,11 +158,11 @@
                 </li>
                 <li>
                   <div class="offer">
-                    <h3>Полный день 2</h3>
+                    <h3>Полный день</h3>
                     <p class="offer__order">с 8:00 до 22:00 </p>
                     <p class="offer__price">
-                      <span class="offer__price-main">2700</span>
-                      <span class="offer__price-shadow">2700</span>
+                      <span class="offer__price-main">2600</span>
+                      <span class="offer__price-shadow">2600</span>
                     </p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
@@ -176,11 +176,11 @@
               <ul class="season-tickets__tab-set">
                 <li>
                   <div class="offer">
-                    <h3>С тренером 3</h3>
+                    <h3>С тренером</h3>
                     <p class="offer__order">12 занятий</p>
                     <p class="offer__price">
-                      <span class="offer__price-main">5000</span>
-                      <span class="offer__price-shadow">5000</span>
+                      <span class="offer__price-main">4800</span>
+                      <span class="offer__price-shadow">4800</span>
                     </p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
@@ -189,11 +189,11 @@
                 </li>
                 <li>
                   <div class="offer">
-                    <h3>Дневной 3</h3>
+                    <h3>Дневной</h3>
                     <p class="offer__order">с 8:00 до 17:00 </p>
                     <p class="offer__price">
-                      <span class="offer__price-main">1700</span>
-                      <span class="offer__price-shadow">1700</span>
+                      <span class="offer__price-main">1500</span>
+                      <span class="offer__price-shadow">1500</span>
                     </p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
@@ -202,11 +202,11 @@
                 </li>
                 <li>
                   <div class="offer">
-                    <h3>Полный день 3</h3>
+                    <h3>Полный день</h3>
                     <p class="offer__order">с 8:00 до 22:00 </p>
                     <p class="offer__price">
-                      <span class="offer__price-main">2700</span>
-                      <span class="offer__price-shadow">2700</span>
+                      <span class="offer__price-main">2500</span>
+                      <span class="offer__price-shadow">2500</span>
                     </p>
                     <div class="offer__btn">
                       <a href="#">Купить абонемент</a>
