--- a/source/index.html
+++ b/source/index.html
@@ -243,6 +243,188 @@
           <div class="promo__image"></div>
         </div>
       </section>
+      <section class="trainers">
+        <div class="trainers__inner">
+          <h2>Тренеры</h2>
+          <div class="trainers__slider slider slider--trainers">
+            <button class="slider__btn slider__btn--left" type="button">
+              <span class="visually-hidden">Показать следующие слева</span>
+            </button>
+            <button class="slider__btn slider__btn--right" type="button">
+              <span class="visually-hidden">Показать следующие справа</span>
+            </button>
+            <div class="slider__carousel">
+              <ul class="slider__list">
+                <li class="slider__item">
+                  <div class="trainer-card">
+                    <p class="trainer-card__name">Александр Пашков</p>
+                    <p class="trainer-card__skill">CrossFit</p>
+                    <ul class="trainer-card__advantages">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="trainer-card">
+                    <p class="trainer-card__name">Александр Пашков</p>
+                    <p class="trainer-card__skill">CrossFit</p>
+                    <ul class="trainer-card__advantages">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="trainer-card">
+                    <p class="trainer-card__name">Александр Пашков</p>
+                    <p class="trainer-card__skill">CrossFit</p>
+                    <ul class="trainer-card__advantages">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="trainer-card">
+                    <p class="trainer-card__name">Александр Пашков</p>
+                    <p class="trainer-card__skill">CrossFit</p>
+                    <ul class="trainer-card__advantages">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="trainer-card">
+                    <p class="trainer-card__name">Александр Пашков</p>
+                    <p class="trainer-card__skill">CrossFit</p>
+                    <ul class="trainer-card__advantages">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="trainer-card">
+                    <p class="trainer-card__name">Александр Пашков</p>
+                    <p class="trainer-card__skill">CrossFit</p>
+                    <ul class="trainer-card__advantages">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="trainer-card">
+                    <p class="trainer-card__name">Александр Пашков</p>
+                    <p class="trainer-card__skill">CrossFit</p>
+                    <ul class="trainer-card__advantages">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="trainer-card">
+                    <p class="trainer-card__name">Александр Пашков</p>
+                    <p class="trainer-card__skill">CrossFit</p>
+                    <ul class="trainer-card__advantages">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="trainer-card">
+                    <p class="trainer-card__name">Александр Пашков</p>
+                    <p class="trainer-card__skill">CrossFit</p>
+                    <ul class="trainer-card__advantages">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="trainer-card">
+                    <p class="trainer-card__name">Александр Пашков</p>
+                    <p class="trainer-card__skill">CrossFit</p>
+                    <ul class="trainer-card__advantages">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="trainer-card">
+                    <p class="trainer-card__name">Александр Пашков</p>
+                    <p class="trainer-card__skill">CrossFit</p>
+                    <ul class="trainer-card__advantages">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="trainer-card">
+                    <p class="trainer-card__name">Александр Пашков</p>
+                    <p class="trainer-card__skill">CrossFit</p>
+                    <ul class="trainer-card__advantages">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="trainer-card">
+                    <p class="trainer-card__name">Александр Пашков</p>
+                    <p class="trainer-card__skill">CrossFit</p>
+                    <ul class="trainer-card__advantages">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="trainer-card">
+                    <p class="trainer-card__name">Александр Пашков</p>
+                    <p class="trainer-card__skill">CrossFit</p>
+                    <ul class="trainer-card__advantages">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="slider__item">
+                  <div class="trainer-card">
+                    <p class="trainer-card__name">Александр Пашков</p>
+                    <p class="trainer-card__skill">CrossFit</p>
+                    <ul class="trainer-card__advantages">
+                      <li>Certified Level 3 Trainer</li>
+                      <li>Победитель чемпионата России по CrossFit</li>
+                      <li>Опыт — 6 лет</li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="js/bundle.min.js"></script>
   </body>
