--- a/source/index.html
+++ b/source/index.html
@@ -447,7 +447,7 @@
                 </div>
                 <div class="advantage__description">
                   <h3>Собственная парковка</h3>
-                  <p>Вы всегда найдете место для своей машины на нашей парковке</p>
+                  <p>Вы всегда найдете место для своей&#160;машины на нашей парковке</p>
                 </div>
               </div>
             </div>
