Делает Отзывы, Контакты desktop

--- a/source/index.html
+++ b/source/index.html
@@ -555,6 +555,49 @@
           </div>
         </div>
       </section>
+      <div class="double-container">
+        <section class="double-container__item free-lesson">
+          <h2>Бесплатное занятие </h2>
+          <form action="#" method="get">
+            <div class="free-lesson__container">
+              <label>
+                <input type="text" placeholder="Имя" name="name">
+              </label>
+              <label>
+                <input type="text" placeholder="Телефон" name="phone">
+              </label>
+            </div>
+            <button type="submit">Отправить</button>
+          </form>
+        </section>
+        <div class="double-container__item double-container__item--right">
+          <section class="contacts">
+            <h2>Контакты</h2>
+            <div class="contacts__container">
+              <div class="contacts__inner-left">
+                <div class="contacts__item contacts__item--left">
+                  <p class="contacts__title">Адрес:</p>
+                  <address class="contacts__description">г. Омск, ул. 60 лет Октября, 7</address>
+                </div>
+                <div class="contacts__item contacts__item--left">
+                  <p class="contacts__title">График работы:</p>
+                  <p class="contacts__description">Пн-Вс: с 8:00 до 22:00</p>
+                </div>
+              </div>
+              <div class="contacts__inner-right">
+                <div class="contacts__item contacts__item--right">
+                  <p class="contacts__title">Телефон:</p>
+                  <p class="contacts__description"><a href="tel:88005555555">8-800-555-55-55</a></p>
+                </div>
+                <div class="contacts__item contacts__item--right">
+                  <p class="contacts__title">Email:</p>
+                  <p class="contacts__description"><a href="mailto:88005555555">omsk@supergym.ru</a></p>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
     </main>
     <script src="js/bundle.min.js"></script>
   </body>
