--- a/source/index.html
+++ b/source/index.html
@@ -565,7 +565,7 @@
                   <input type="text" placeholder="Имя" name="name" required>
                 </label>
                 <label>
-                  <input type="text" placeholder="Телефон" name="phone" required>
+                  <input type="text" placeholder="Телефон" name="phone" maxlength="14" required>
                 </label>
               </div>
               <button type="submit">Отправить</button>
