Делает плавный скролл к Абонементы

--- a/source/index.html
+++ b/source/index.html
@@ -34,7 +34,7 @@
                 <li>Кардио-зона</li>
               </ul>
               <div class="main-block__button">
-                <a href="#">Купить абонемент</a>
+                <a class="scroll-to" href="#season-tickets">Купить абонемент</a>
               </div>
             </div>
             <div class="main-block__photo">
@@ -67,7 +67,7 @@
           </div>
         </div>
       </section>
-      <section class="season-tickets">
+      <section class="season-tickets" id="season-tickets">
         <div class="season-tickets__bg"></div>
         <div class="season-tickets__inner">
           <h2>Абонементы</h2>
