Добавляет в Преимущества картинки-цифры

--- a/source/index.html
+++ b/source/index.html
@@ -432,7 +432,7 @@
             <div class="advantages__top">
               <div class="advantages__item advantage advantage--top">
                 <div class="advantage__indicator">
-                  <p class="advantage__number">900</p>
+                  <div class="advantage__number advantage__number--900" aria-label="900"></div>
                   <p class="advantage__unit">кв/м</p>
                 </div>
                 <div class="advantage__description">
@@ -442,7 +442,7 @@
               </div>
               <div class="advantages__item advantage advantage--top">
                 <div class="advantage__indicator">
-                  <p class="advantage__number">70</p>
+                  <div class="advantage__number advantage__number--70" aria-label="70"></div>
                   <p class="advantage__unit">машин</p>
                 </div>
                 <div class="advantage__description">
@@ -460,7 +460,7 @@
             <div class="advantages__bottom">
               <div class="advantages__item advantage advantage--bottom">
                 <div class="advantage__indicator">
-                  <p class="advantage__number">350</p>
+                  <div class="advantage__number advantage__number--350" aria-label="350"></div>
                   <p class="advantage__unit">мест</p>
                 </div>
                 <div class="advantage__description">
@@ -470,7 +470,7 @@
               </div>
               <div class="advantages__item advantage advantage--bottom">
                 <div class="advantage__indicator">
-                  <p class="advantage__number">5+</p>
+                  <div class="advantage__number advantage__number--5" aria-label="5+"></div>
                   <p class="advantage__unit">лет</p>
                 </div>
                 <div class="advantage__description">
