--- a/source/index.html
+++ b/source/index.html
@@ -432,7 +432,9 @@
             <div class="advantages__top">
               <div class="advantages__item advantage advantage--top">
                 <div class="advantage__indicator">
-                  <div class="advantage__number advantage__number--900" aria-label="900"></div>
+                  <p class="advantage__number advantage__number--900">
+                    <span class="visually-hidden">900</span>
+                  </p>
                   <p class="advantage__unit">кв/м</p>
                 </div>
                 <div class="advantage__description">
@@ -442,7 +444,9 @@
               </div>
               <div class="advantages__item advantage advantage--top">
                 <div class="advantage__indicator">
-                  <div class="advantage__number advantage__number--70" aria-label="70"></div>
+                  <p class="advantage__number advantage__number--70">
+                    <span class="visually-hidden">70</span>
+                  </p>
                   <p class="advantage__unit">машин</p>
                 </div>
                 <div class="advantage__description">
@@ -460,7 +464,9 @@
             <div class="advantages__bottom">
               <div class="advantages__item advantage advantage--bottom">
                 <div class="advantage__indicator">
-                  <div class="advantage__number advantage__number--350" aria-label="350"></div>
+                  <p class="advantage__number advantage__number--350">
+                    <span class="visually-hidden">350</span>
+                  </p>
                   <p class="advantage__unit">мест</p>
                 </div>
                 <div class="advantage__description">
@@ -470,7 +476,9 @@
               </div>
               <div class="advantages__item advantage advantage--bottom">
                 <div class="advantage__indicator">
-                  <div class="advantage__number advantage__number--5" aria-label="5+"></div>
+                  <p class="advantage__number advantage__number--5">
+                    <span class="visually-hidden">5+</span>
+                  </p>
                   <p class="advantage__unit">лет</p>
                 </div>
                 <div class="advantage__description">
