Подключает библиотеку маски для ввода номера телефона

--- a/source/index.html
+++ b/source/index.html
@@ -647,6 +647,7 @@
         </ul>
       </nav>
     </footer>
-    <script src="js/bundle.min.js"></script>
+    <script src="js/vendor.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
