--- a/source/index.html
+++ b/source/index.html
@@ -246,8 +246,8 @@
       <section class="trainers">
         <div class="trainers__inner">
           <h2>Тренеры</h2>
-          <div class="slider2 slider2--trainers">
-            <div class="slider2__item">
+          <div class="slider slider--trainers">
+            <div class="slider__item">
               <div class="trainer-card">
                 <p class="trainer-card__name">Александр Пашков</p>
                 <p class="trainer-card__skill">CrossFit</p>
@@ -258,7 +258,7 @@
                 </ul>
               </div>
             </div>
-            <div class="slider2__item">
+            <div class="slider__item">
               <div class="trainer-card">
                 <p class="trainer-card__name">Александр Пашков</p>
                 <p class="trainer-card__skill">CrossFit</p>
@@ -269,7 +269,7 @@
                 </ul>
               </div>
             </div>
-            <div class="slider2__item">
+            <div class="slider__item">
               <div class="trainer-card">
                 <p class="trainer-card__name">Александр Пашков</p>
                 <p class="trainer-card__skill">CrossFit</p>
@@ -280,7 +280,7 @@
                 </ul>
               </div>
             </div>
-            <div class="slider2__item">
+            <div class="slider__item">
               <div class="trainer-card">
                 <p class="trainer-card__name">Александр Пашков</p>
                 <p class="trainer-card__skill">CrossFit</p>
@@ -291,7 +291,7 @@
                 </ul>
               </div>
             </div>
-            <div class="slider2__item">
+            <div class="slider__item">
               <div class="trainer-card">
                 <p class="trainer-card__name">Александр Пашков</p>
                 <p class="trainer-card__skill">CrossFit</p>
@@ -302,7 +302,7 @@
                 </ul>
               </div>
             </div>
-            <div class="slider2__item">
+            <div class="slider__item">
               <div class="trainer-card">
                 <p class="trainer-card__name">Александр Пашков</p>
                 <p class="trainer-card__skill">CrossFit</p>
@@ -313,7 +313,7 @@
                 </ul>
               </div>
             </div>
-            <div class="slider2__item">
+            <div class="slider__item">
               <div class="trainer-card">
                 <p class="trainer-card__name">Александр Пашков</p>
                 <p class="trainer-card__skill">CrossFit</p>
@@ -324,7 +324,7 @@
                 </ul>
               </div>
             </div>
-            <div class="slider2__item">
+            <div class="slider__item">
               <div class="trainer-card">
                 <p class="trainer-card__name">Александр Пашков</p>
                 <p class="trainer-card__skill">CrossFit</p>
@@ -335,7 +335,7 @@
                 </ul>
               </div>
             </div>
-            <div class="slider2__item">
+            <div class="slider__item">
               <div class="trainer-card">
                 <p class="trainer-card__name">Александр Пашков</p>
                 <p class="trainer-card__skill">CrossFit</p>
@@ -346,7 +346,7 @@
                 </ul>
               </div>
             </div>
-            <div class="slider2__item">
+            <div class="slider__item">
               <div class="trainer-card">
                 <p class="trainer-card__name">Александр Пашков</p>
                 <p class="trainer-card__skill">CrossFit</p>
@@ -357,7 +357,7 @@
                 </ul>
               </div>
             </div>
-            <div class="slider2__item">
+            <div class="slider__item">
               <div class="trainer-card">
                 <p class="trainer-card__name">Александр Пашков</p>
                 <p class="trainer-card__skill">CrossFit</p>
@@ -468,8 +468,8 @@
       <section class="reviews">
         <div class="reviews__inner">
           <h2>Отзывы</h2>
-          <div class="slider2 slider2--reviews">
-            <div class="slider2__item">
+          <div class="slider slider--reviews">
+            <div class="slider__item">
               <div class="review-card">
                 <div class="review-card__image"></div>
                 <p class="review-card__name">Анна Орлова</p>
@@ -478,7 +478,7 @@
                   даже в вечернее время нет очередей»</p>
               </div>
             </div>
-            <div class="slider2__item">
+            <div class="slider__item">
               <div class="review-card">
                 <div class="review-card__image"></div>
                 <p class="review-card__name">Анна Орлова</p>
